--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -11,7 +11,8 @@ OBJS +=	webserver/handlers/addHandler.o \
 	webserver/handlers/notFound.o \
 	webserver/handlers/staticHandler.o
 
-OBJS += webserver/request/getConnection.o \
+OBJS += webserver/request/attributes.o \
+	webserver/request/getConnection.o \
 	webserver/request/getParameter.o \
 	webserver/request/getMethod.o \
 	webserver/request/getUploadData.o \
